# sonic-experiments

./: Cargo.toml  README.md  config.cfg  docker-compose.yml  sqlx-data.json
migrations/: 20220409102812_create_table_product.down.sql
sonic-examples/: Cargo.toml  build.rs  sqlx-data.json
sonic-examples/migrations/: 20220409102812_create_table_product.up.sql
sonic-examples/server/: app.py
sonic-examples/server/templates/: index.html  search.html
sonic-examples/src/: app_state.rs  db.rs  errors.rs  main.rs  template.rs
sonic-examples/templates/: search.html
src/: channel.rs  db.rs  errors.rs  main.rs  template.rs  utils.rs
templates/: index.html  search.html
