[package]
name = "sonic-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6"
actix-web = "4"
askama = "0.11.1"
askama_actix = "0.13.0"
actix-web-static-files = "4.0"
static-files = "0.2.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sonic-channel = { version = "0.6.0", features = [
    "ingest",
    "control",
    "search",
] }
uuid = { version = "0.8", features = ["serde", "v4"] }


## Database
sqlx = { version = "0.5", features = [
    "json",
    "offline",
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
    "macros",
] }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
rand = "0.8.5"
itertools = "0.10.3"

[build-dependencies]
static-files = "0.2.1"
