[package]
name = "sonic-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6"
actix-web = "4"
askama = "0.12"
askama_actix = "0.14"
actix-web-static-files = "4.0"
static-files = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sonic-channel = { version = "1", features = [
    "ingest",
    "control",
    "search",
] }
uuid = { version = "1", features = ["serde", "v4"] }



## Database
sqlx = { version = "0.7.3", features = [
    "json",
    # "offline",
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
    "macros",
] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
itertools = "0.11"

[build-dependencies]
static-files = "0.2"
