[package]
name = "sonic-experiments"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7"
actix-web = "4"
askama = "0.14"
askama_actix = "0.14"
actix-web-static-files = "4.0"
static-files = "0.2"
askama_web = { version = "0.14", features = ["actix-web-4"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
sonic-channel = { version = "1", features = [
    "ingest",
    "control",
    "search",
] }
uuid = { version = "1", features = ["serde", "v4"] }



## Database
sqlx = { version = "0.8", features = [
    "json",
    # "offline",
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
    "macros",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
rand = "0.9"
itertools = "0.14"

[build-dependencies]
static-files = "0.2"
