[package]
name = "sonic-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-web = "4.0.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sonic-channel = { version = "0.6.0", features = [
    "ingest",
    "control",
    "search",
] }
