[package]
name = "sonic-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-files = "0.6.0"
actix-web = "4.0.1"
askama = "0.11.1"
askama_actix = "0.13.0"
actix-web-static-files = "4.0"
static-files = "0.2.1"

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sonic-channel = { version = "0.6.0", features = [
    "ingest",
    "control",
    "search",
] }


[build-dependencies]
static-files = "0.2.1"
